--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   
   <h1> Big Title - Website 2</h1>
-  <h2> Introduction: Welcome to Alexandra's website. As you may hvae guessed from the title, this is my second attempt at creating a website. This is a space i will beusing to experiment with different features of a website and maybe have a go at making some interactive features. </h2>
+  <h2> Introduction: Welcome to Alexandra's website. As you may have guessed from the title, this is my second attempt at creating a website. This is a space i will beusing to experiment with different features of a website and maybe have a go at making some interactive features. </h2>
   
   <table>
   <tr>
