--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <body>
   
-  <h1> Big Title - Website 2</h1>
-  <h2> Introduction: Welcome to Alexandra's website. As you may have guessed from the title, this is my second attempt at creating a website. This is a space i will beusing to experiment with different features of a website and maybe have a go at making some interactive features. </h2>
+  <h1> Website 2</h1>
+  <h2> Introduction: Welcome to Alexandra's website. As you may hvae guessed from the title, this is my second attempt at creating a website. This is a space I will beusing to experiment with different features of a website and maybe have a go at making some interactive features. </h2>
   
   <table>
   <tr>
@@ -26,17 +26,19 @@
   <tr>
     <td>A hyperlink to another part of the website</td>
     <td>-</td>
-    <td>-hvhjmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm</td>
+    <td>-</td>
   </tr>
   <tr>
     <td>Some sort of animation</td>
-    <td>yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy</td>
-    <td>dhsn</td>
+    <td>-</td>
+    <td>-</td>
   </tr>
 </table>
   
+<h2></h2>
+<h2></h2>
   <aside>
-    <h2> some side information</h2>
+    <h2>some side information</h2>
     <p> some slightly smaller side information</p>
   </aside>
   
