Filling in bio info

--- a/index.html
+++ b/index.html
@@ -9,43 +9,46 @@
 
 <body>
   
-  <h1> Website 2</h1>
-  <h2> Introduction: Welcome to Alexandra's website. As you may hvae guessed from the title, this is my second attempt at creating a website. This is a space I will beusing to experiment with different features of a website and maybe have a go at making some interactive features. </h2>
+  <h1> Nucelic Acids</h1>
+  <h2> Introduction: This website will provide revision notes for the topic of nucleic acids in A-level Biology <br> <br> What are the differences and similarities between DNA and RNA?</h2>
   
   <table>
   <tr>
-    <th>Idea</th>
-    <th>Pros</th>
-    <th>Cons</th>
+    <th></th>
+    <th>DNA</th>
+    <th>RNA</th>
   </tr>
   <tr>
-    <td>A working hyperlink to another website</td>
-    <td>-</td>
-    <td>-</td>
+    <td>Bases</td>
+    <td>Adenine, <b>Thymine</b>, Guanine, Cytosine</td>
+    <td>Adenine, <b>Uracil</b>, Guanine, Cytosine</td>
   </tr>
   <tr>
-    <td>A hyperlink to another part of the website</td>
-    <td>-</td>
-    <td>-</td>
+    <td>Strands</td>
+    <td>Double stranded</td>
+    <td>Single stranded</td>
   </tr>
   <tr>
-    <td>Some sort of animation</td>
-    <td>-</td>
-    <td>-</td>
+    <td>Types</td>
+    <td>Circular (in plasmids) <br> Chromosomal</td>
+    <td>tRNA (tranfer) <br> mRNA (messenger)</td>
   </tr>
 </table>
   
-<h2></h2>
-<h2></h2>
+<br> <br>
   <aside>
     <h2>some side information</h2>
     <p> some slightly smaller side information</p>
   </aside>
   
   <footer>
-    <p> This is all of the text in the footer</p>
+    <p> This is all of the text in the footer
+      Thank you for visiting this website.
+    </p>
   </footer>
 
 </body>
+
+<button type="button">Next Page</button>
 
 </html>
