--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   
   <h1> Nucelic Acids</h1>
-  <h2> Introduction: This website will provide revision notes for the topic of nucleic acids in A-level Biology <br> <br> What are the differences and similarities between DNA and RNA?</h2>
+  <h2> Hi and welcome to my website I hope this will provide some help during revision by keeping the keywords required by the evil markschemes in each topic of A-level Biology. <br> <br> What are the differences and similarities between DNA and RNA?</h2>
   
   <table>
   <tr>
@@ -42,9 +42,7 @@
   </aside>
   
   <footer>
-    <p> This is all of the text in the footer
-      Thank you for visiting this website.
-    </p>
+    <p>Thank you for visiting this website.</p>
   </footer>
 
 </body>
