Adding a navigation bar and 3 extra pages

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 
 <body>
+  <nav>
+    <a href="./index.html">Home</a>
+    <a href="./about.html">Topic 1</a>
+    <a href="./service.html">Topic 2</a>
+    <a href="./contact.html">Topic 3</a>
+  </nav>
   
   <h1> Nucelic Acids</h1>
   <h2> Hi and welcome to my website I hope this will provide some help during revision by keeping the keywords required by the evil markschemes in each topic of A-level Biology. <br> <br> What are the differences and similarities between DNA and RNA?</h2>
