Renaming pages and writing page 1

--- a/top2.html
+++ b/top2.html
@@ -9,9 +9,9 @@
   <body>
     <nav>
       <a href="./index.html">Home</a>
-      <a href="./about.html">Topic 1</a>
-      <a href="./service.html">Topic 2</a>
-      <a href="./contact.html">Topic 3</a>
+      <a href="./top1.html">Topic 1</a>
+      <a href="./top2.html">Topic 2</a>
+      <a href="./top3.html">Topic 3</a>
     </nav>
   </body>
 </html>
