linking style sheet to pages

--- a/top1.html
+++ b/top1.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>T1: Basic Molecules</title>
+    <link rel="stylesheet" href="web2style.css">
   </head>
   <body>
     <nav>
@@ -14,9 +15,9 @@
       <a href="./top3.html">Topic 3</a>
     </nav>
 
-    <h1> Topic 1: Basic Molecules</h1>
-    <h2> Carbohydrates, Proteins and Lipids are all very important organic molecules used within organisms.
-    <br> <br> </h2>
+    <h3>  Topic 1: Biological Molecules</h3>
+    <h4> Carbohydrates, Proteins and Lipids are all very important organic molecules used within organisms.
+    <br> <br> </h4>
   
   </body>
 </html>
