--- a/top3.html
+++ b/top3.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Business website</title>
+    <title>Topic 3</title>
+    <link rel="stylesheet" href="web2style.css">
   </head>
   <body>
     <nav>
@@ -13,5 +14,8 @@
       <a href="./top2.html">Topic 2</a>
       <a href="./top3.html">Topic 3</a>
     </nav>
+
+    <h3>Topic 3: Cell Structure </h3>
+
   </body>
 </html>
