--- a/top2.html
+++ b/top2.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Business website</title>
+    <title>Topic 2</title>
+    <link rel="stylesheet" href="web2style.css">
   </head>
   <body>
     <nav>
@@ -13,5 +14,35 @@
       <a href="./top2.html">Topic 2</a>
       <a href="./top3.html">Topic 3</a>
     </nav>
+
+    <h3>Topic 2: Nucleic Acids </h3>
+    <h4> Nucleic acids like DNA and RNA are polynucleotides made out of nucleotide monomers. Each Nucleotide is made out of a pentose sugar, an inorganic phosphate and a nitrogenous base.
+      <br> <br> What are the differences and similarities between DNA and RNA?</h4>
+  
+  <table>
+  <tr>
+    <th></th>
+    <th>DNA</th>
+    <th>RNA</th>
+  </tr>
+  <tr>
+    <td>Bases</td>
+    <td>Adenine, <b>Thymine</b>, Guanine, Cytosine</td>
+    <td>Adenine, <b>Uracil</b>, Guanine, Cytosine</td>
+  </tr>
+  <tr>
+    <td>Strands</td>
+    <td>Double stranded</td>
+    <td>Single stranded</td>
+  </tr>
+  <tr>
+    <td>Types</td>
+    <td>Circular (in plasmids) <br> Chromosomal</td>
+    <td>tRNA (tranfer) <br> mRNA (messenger)</td>
+  </tr>
+</table>
+  
+<br> <br>
+
   </body>
 </html>
