Topic 4 key words

--- a/index.html
+++ b/index.html
@@ -85,6 +85,20 @@
       Smooth Endoplasmic reticulum <br>
     </td>
   </tr>
+  <tr>
+    <td>4</td>
+    <td>Transport across cell membrane</td>
+    <td>
+      - Diffusion <br>
+      - Osmosis <br>
+      - Active Transport <br>
+      - Semi-permeable membrane <br>
+      - Concentration gradient <br>
+      - Net movement <br>
+      - passive process <br>
+      - active process <br>
+    </td>
+  </tr>
 </table>
   
 <br> <br>
