--- a/index.html
+++ b/index.html
@@ -103,8 +103,9 @@
   
 <br> <br>
   <aside>
-    <h2>some side information</h2>
-    <p> some slightly smaller side information</p>
+    <h2>Not sure what topic to start with?</h2>
+    <p> We'll suggest what topic to start your revision with </p>
+    <button type="button">Randomise topic</button>
   </aside>
   
   <footer>
@@ -112,7 +113,6 @@
   </footer>
 
 </body>
-
-<button type="button">Next Page</button>
+<script> src = index.js </script>
 
 </html>
