--- a/top2.html
+++ b/top2.html
@@ -19,30 +19,61 @@
     <h4> Nucleic acids like DNA and RNA are polynucleotides made out of nucleotide monomers. Each Nucleotide is made out of a pentose sugar, an inorganic phosphate and a nitrogenous base.
       <br> <br> What are the differences and similarities between DNA and RNA?</h4>
   
-  <table>
-  <tr>
-    <th></th>
-    <th>DNA</th>
-    <th>RNA</th>
-  </tr>
-  <tr>
-    <td>Bases</td>
-    <td>Adenine, <b>Thymine</b>, Guanine, Cytosine</td>
-    <td>Adenine, <b>Uracil</b>, Guanine, Cytosine</td>
-  </tr>
-  <tr>
-    <td>Strands</td>
-    <td>Double stranded</td>
-    <td>Single stranded</td>
-  </tr>
-  <tr>
-    <td>Types</td>
-    <td>Circular (in plasmids) <br> Chromosomal</td>
-    <td>tRNA (tranfer) <br> mRNA (messenger)</td>
-  </tr>
-</table>
-  
-<br> <br>
-
+    <table class ="table1">
+      <tr>
+        <th></th>
+        <th>DNA</th>
+        <th>RNA</th>
+      </tr>
+      <tr>
+        <td>Bases</td>
+        <td>Adenine, <b>Thymine</b>, Guanine, Cytosine</td>
+        <td>Adenine, <b>Uracil</b>, Guanine, Cytosine</td>
+      </tr>
+      <tr>
+        <td>Strands</td>
+        <td>Double stranded</td>
+        <td>Single stranded</td>
+      </tr>
+      <tr>
+        <td>Types</td>
+        <td>Circular (in plasmids) <br> Chromosomal</td>
+        <td>tRNA (tranfer) <br> mRNA (messenger)</td>
+      </tr>
+      <tr>
+        <td>Shape</td>
+        <td>Helical <br> Chromosomal</td>
+        <td>tRNA = clover <br> mRNA = single strand / linear</td>
+      </tr>
+      <tr>
+        <td>Stability</td>
+        <td>DNA is very stable due to the linking of the two complentary strands by hydrogen bonds. This reduces the amount of mutation which occur.</td>
+        <td>tRNA (tranfer) <br> mRNA (messenger)</td>
+      </tr>
+    </table>
+    <br> <br>
+    <h2><u>Key words:</u>
+      <br> Semi-conservative
+      <br> Degenerate
+       </h2>
+    <h3>Base Sequence Mutations</h3>
+    <table class="table2">
+      <tr>
+        <th>Addition</th>
+        <th>Deletion</th>
+        <th>Substitution</th>
+      </tr>
+      <tr>
+        <td>A new base is added
+          <br> Effect: Frame shift
+        </td>
+        <td>A base is removed
+          <br> Effect: Frame shift
+        </td>
+        <td>A new base is added
+          <br>Effect: maybe none as the triplet code is degenerate so a different base triplet might code for the sam amino acid. This is known as a silent substitution.
+        </td>
+      </tr>
+    </table>
   </body>
 </html>
