Adding more topics to main table and styling

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <h1> A-level Biology Summaries + Revision </h1>
   <h2> Hi and welcome to my website I hope this will provide some help during revision by keeping the keywords required by the evil markschemes in each topic of A-level Biology. <br> <br> The Topic List</h2>
   
-  <table>
+  <table class="main">
   <tr>
     <th>No.</th>
     <th>Topic</th>
@@ -97,6 +97,120 @@
       - Net movement <br>
       - passive process <br>
       - active process <br>
+    </td>
+  </tr>
+  <tr>
+    <td>5</td>
+    <td>Cell Recognition and the Immune System</td>
+    <td>
+      - Pathogens <br>
+      - T-helper cells <br>
+      - B-cells <br>
+      - Cell-mediated response <br>
+      - Humoural response <br>
+      - Antigens <br>
+      - Antibodies <br>
+      - Memory lymphocytes <br>
+      - Phagocytosis <br>
+      - Vaccination <br>
+      - Monoclonal antibodies <br>
+    </td>
+  </tr>
+  <tr>
+    <td>6</td>
+    <td>Exchange</td>
+    <td>
+      - Spiracles <br>
+      - Oxygen <br>
+      - Carbon Dioxide <br>
+      - Surface area to volume ratio <br>
+      - Gills <br>
+      - Counter-surrent flow <br>
+      - Stomata <br>
+    </td>
+  </tr>
+  <tr>
+    <td>7</td>
+    <td>Mass Transport</td>
+    <td>
+      - Arteries <br>
+      - Veins <br>
+      - Capillaries <br>
+      - Diastole <br>
+      - Systole <br>
+      - Translocation <br>
+      - Transpiration <br>
+      - Atrium <br>
+      - Ventricles <br>
+      - Atroventricular valves <br>
+      - Semi-lunar valves <br>
+      - Xylem <br>
+      - Phloem <br>
+      - Haemoglobin <br>
+      - Dissociation curves <br>
+    </td>
+  </tr>
+  <tr>
+    <td>8</td>
+    <td>DNA Genes and Chromosomes</td>
+    <td>
+      - Triplet Code <br>
+      - Introns <br>
+      - Exons <br>
+      - Transcription <br>
+      - Translation <br>
+      - Centromere <br>
+      - Chromatids <br>
+    </td>
+  </tr>
+  <tr>
+    <td>9</td>
+    <td>Genetic Diversity and Adaptations</td>
+    <td>
+      - Natural Selection <br>
+      - Evolution <br>
+      - Chromosome Mutations <br>
+      - Gene Mutation <br>
+      - Reproduction <br>
+      - Meiosis <br>
+    </td>
+  </tr>
+  <tr>
+    <td>10</td>
+    <td>Species and Taxonomy</td>
+    <td>
+      - Diffusion <br>
+      - Osmosis <br>
+      - Genus <br>
+      - Species <br>
+      - Phylogenetic trees <br>
+      - Courtship <br>
+      - Biodiversity <br>
+      - Species Diversity Index <br>
+      - Species richness <br>
+    </td>
+  </tr>
+  <tr>
+    <td>11</td>
+    <td>Photosynthesis</td>
+    <td>
+      - Chlorophyll <br>
+      - Electron Transfer Chain <br>
+      - Chemiosmotic Theory<br>
+      - Photophosphorylation <br>
+      - Photolysis <br>
+      - Courtship <br>
+      - Reduced NADP <br>
+      - Calvin Cycle <br>
+      - Triose Phophate <br>
+      - Rubisco <br>
+    </td>
+  </tr>
+  <tr>
+    <td>12</td>
+    <td>Respiration</td>
+    <td>
+      - Dn <br>
     </td>
   </tr>
 </table>
